metadata-classic/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AccountRecordTypeId__c</fullName>
        <formula>CASESAFEID(Account.RecordTypeId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdminLinkViewUser__c</fullName>
        <formula>IF( 
NOT(ISBLANK(ThumbtackUserID__c)), 
HYPERLINK(&quot;https://www.thumbtack.com/admin/users/user?usr_user_id=&quot;&amp;ThumbtackUserID__c, &quot;View User&quot;), 
HYPERLINK(&quot;https://www.thumbtack.com/admin/users?search_type=email&amp;searchterm=&quot;&amp; Email, &quot;View User&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin Link View User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactIsSpam__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate true if the contact is a known spam address.</description>
        <label>Contact Is Spam</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactIsThumbtackStaff__c</fullName>
        <description>Formula field that will parse out the email address to determine if the contact is an employee of Thumbtack.com</description>
        <formula>IF(
CONTAINS( Email , &quot;@thumbtack.com&quot;),
True,
False)</formula>
        <label>Contact is Thumbtack Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactOrigin__c</fullName>
        <description>Picklist field to indicate who/what created the contact.</description>
        <label>Contact Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email-to-Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreatedTime__c</fullName>
        <description>Formula to bring over the time of day when the contact was created; used for list view sorting.</description>
        <formula>DATETIMEVALUE(CreatedDate)</formula>
        <label>Created Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DoNotSurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, we will will not ever survey this contact.</description>
        <inlineHelpText>Select this to prevent surveys from being sent.</inlineHelpText>
        <label>Do Not Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailBounced__c</fullName>
        <description>Formula to display if the contacts email has had a bounced email</description>
        <formula>IF(ISBLANK(EmailBouncedDate),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Bounced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmailRouting__c</fullName>
        <description>Picklist field to indicate how an incoming email from the contact should be routed - used in workflow rules and processes.</description>
        <label>Email Routing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Route to Marketplace Integrity</fullName>
                </value>
                <value>
                    <fullName>Route to Spam</fullName>
                </value>
                <value>
                    <fullName>No Routing</fullName>
                </value>
                <value>
                    <fullName>Route to MI Senior Manager</fullName>
                </value>
                <value>
                    <fullName>Route to CS Senior Manager</fullName>
                </value>
                <value>
                    <fullName>Route to Labs</fullName>
                </value>
                <value>
                    <fullName>Route to Sales &amp; Account Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KDSurveySent__c</fullName>
        <description>The date/time the KD Survey was sent to this contact.</description>
        <label>KD Survey Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>KDSurveyStatus__c</fullName>
        <label>KD Survey Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Send</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastNameIsEmailAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field marked true through case trigger if the last name was set to the email address.</description>
        <label>Last Name is Email Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastSurveyedCaseCategory__c</fullName>
        <description>Category of the last survey offered</description>
        <inlineHelpText>Category of the last survey offered</inlineHelpText>
        <label>Last Surveyed Case Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastSurveyedCaseSubcategory__c</fullName>
        <description>Subcategory of the last surveyed case.</description>
        <inlineHelpText>Subcategory of the last surveyed case.</inlineHelpText>
        <label>Last Surveyed Case Subcategory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastSurveyed__c</fullName>
        <description>Last surveyed date and time</description>
        <inlineHelpText>The last date and time that a survey was offered.</inlineHelpText>
        <label>Last Surveyed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PhoneRouting__c</fullName>
        <label>Phone Routing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Experiment (Exclude from Callback)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Radius_ContactJobFunction__c</fullName>
        <description>Radius field for Contact Job Function</description>
        <label>Contact Job Function</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radius_ContactTitle__c</fullName>
        <description>Radius field for ‘Contact Title’</description>
        <label>Contact Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radius_Email__c</fullName>
        <description>Radius field for Email</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Radius_FirstName__c</fullName>
        <description>Radius field for First Name</description>
        <label>First Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radius_JobTitle__c</fullName>
        <description>Radius field for Job Title</description>
        <label>Job Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radius_LastName__c</fullName>
        <description>Radius Field for Last Name</description>
        <label>Last Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radius_LinkedInProfileURL__c</fullName>
        <description>Radius field for LinkedIn Profile URL</description>
        <label>LinkedIn Profile URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Radius_Phone__c</fullName>
        <description>Radius field for Phone</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Radius_SeniorityLevel__c</fullName>
        <description>Radius for Seniority Level</description>
        <label>Seniority Level</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RouteToMI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to route emails to MI. Checked by MI Incident creation process, unchecked by MI Incident closure process. Also editable by MI.</description>
        <label>Route To MI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Temp__c</fullName>
        <description>Temporary field to help with data cleanup</description>
        <formula>IF (usr_user_id__c &lt;&gt; Account.usr_user_id__c,&quot;No Match&quot;,
IF (AND ( NOT ISBLANK(Account.usr_user_id__c), ISBLANK(usr_user_id__c) ), &quot;Contact User ID Blank&quot;,
&quot;Match&quot;))</formula>
        <label>Temp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThumbtackUserID__c</fullName>
        <formula>TEXT(usr_user_id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thumbtack User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user_pk_id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Foreign key value for Salesforce Connect; PK ID from the database. This field is mapped / synced with website.usr_user.user_user_pk</description>
        <externalId>true</externalId>
        <label>Thumbtack User PK</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>usr_user_id__c</fullName>
        <description>usr_user_id</description>
        <externalId>true</externalId>
        <label>User ID (Unique)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>ContactsCreatedToday</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Contacts Created Today</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CustomerSpam</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>EmailRouting__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EmailRouting__c</field>
            <operation>equals</operation>
            <value>Route to Spam</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Customer</value>
        </filters>
        <label>Customer marked as SPAM</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CustomerToRouteToMI</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>RouteToMI__c</columns>
        <columns>EmailRouting__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RouteToMI__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Customer</value>
        </filters>
        <label>Customer to Route to MI</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Duplicates</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>EmailRouting__c</columns>
        <columns>LastNameIsEmailAddress__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ContactOrigin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>equals</operation>
            <value>billondrums@yahoo.com</value>
        </filters>
        <label>Duplicates</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EnterpriseEmailNotification</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EmailRouting__c</field>
            <operation>equals</operation>
            <value>Route to Enterprise</value>
        </filters>
        <label>Enterprise Routing</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ProSPAM</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>ContactIsSpam__c</columns>
        <columns>EmailRouting__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ContactIsSpam__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.ThumbtackPro</value>
        </filters>
        <label>Pro marked as SPAM</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ProsToRouteToMI</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>RouteToMI__c</columns>
        <columns>EmailRouting__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RouteToMI__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.ThumbtackPro</value>
        </filters>
        <label>Pros to Route to MI</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <description>This record type is used for all thumbtack customers</description>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>ThumbtackPro</fullName>
        <active>true</active>
        <description>This record type is used for all thumbtack professionals</description>
        <label>Thumbtack Pro</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>